--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,7 +4,7 @@ header {
     margin: 1.5rem auto 0 auto;
 }
 
-header span a {
+header  a {
     color: #F05542;
     font-weight: bold;
     font-size: 36px;
