--- a/assets/css/container-jobs.css
+++ b/assets/css/container-jobs.css
@@ -43,7 +43,8 @@
 
 .cards{
     display: flex;
-    gap: 0px 10px;
+    gap: 15px 10px;
+    flex-wrap: wrap;
 }
 
 
@@ -57,8 +58,8 @@
 
 .format .details{
     display: flex;
-    /* flex-direction: column; */
-    gap: 0 10px ;
+    flex-direction: column;
+    gap: 5px 10px ;
 }
 
 
@@ -66,6 +67,9 @@
     /* background-color: red; */
 }
 
+.htmlUser{
+    margin-top: 50px;
+}
 
 .container-jobs .vagasContainer .card .modalidade {
     color: #0e0f0f8a;
